# actix-web-example

./: .gitignore  Cargo.toml  docker-compose.yml
entity/: Cargo.toml
entity/src/: mod.rs  user.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240609_193236_user_unique_columns.rs
src/: database.rs  errors.rs  main.rs  prelude.rs  state.rs
src/api/: mod.rs
src/api/languages/: schema.rs  urls.rs
src/api/security/: guards.rs  mod.rs  user_token.rs
src/api/users/: mod.rs  schema.rs  services.rs  urls.rs
src/api/words/: mod.rs  schema.rs  services.rs  urls.rs
src/repositories/: user.rs
src/settings/: mod.rs
tests/: integration_tests.rs
